# gamma-camera

./: .gitignore  CMakeLists.txt  README.md  action.cc  action.hh  checkCoupling.mac  checkDetector.mac  checkGeometry.mac  collBin.C  collimatorBin.C  construction.cc  construction.hh  copynumber.cc  copynumber.hh  detector.cc  detector.hh  detectorHit.cc  detectorHit.hh  detectorSD.cc  detectorSD.hh  direct.mac  event.cc  event.hh  gamma.mac  generator.cc  generator.hh  hit.cc  hit.hh  isosource.mac  launchSilver.mac  nuclei.mac  opticalBin.C  outh2.C  physics.cc  physics.hh  quantumEff.mac  real.mac  run.cc  run.hh  run.mac  (+16 more)
analysis/: fersAnaTest.C  fersAnaTest.h  fersAnaTestRun.C  fersRead.cpp  fersRead.h  fersTree.cpp  fersTree.h  ntupSimToFers.cc  plotEnergy.C  reconstructImage_gravity.C  reconstructImage_max.C  reconstructImage_sum.C  vectorchannels2.C
include/: action.hh  channelHit.hh  construction.hh  detectorHit.hh  detectorSD.hh  enums.hh  event.hh  generator.hh  infoEvent.hh  infoPhantom.hh  parameters.hh  physics.hh  run.hh  scintillatorSD.hh  stacking.hh
macro/: ba133.mac  changePos.mac  checkDetector.mac  cs137.mac  det.mac  direct.mac  g342keV.mac  gamma.mac  launch1kSilver.mac  launchSilver.mac  lenaVial.mac  mediaSource.mac  moby.mac  muon.mac  run_ba133.sh  run_coupler_scan.sh  run_lena.sh  run_telegram.sh  scanQuantumEff.mac  scan_energy.sh  scan_height.sh  scan_lena_height.sh  scandet.mac  scintillator.mac  silver.mac  tutorial.mac  tutorial2.mac
source/: action.cc  channelHit.cc  construction.cc  detectorSD.cc  event.cc  generator.cc  physics.cc  run.cc  scintillatorSD.cc  stacking.cc  stepping.cc
